# srnp

./: .gitignore  CMakeLists.txt  CMakeLists_catkin.txt  README.md  master_hub.cpp  master_hub.h  package.xml  srnpConfig.cmake.in
CMakeModules/: CPackSettings.cmake
Notes/: Setup
cmake/: cmake_uninstall.cmake.in
include/: CommMessages.h  MasterMessages.h  MessageHeader.h  Pair.h  PairBase.h  PairQueue.h  PairSpace.h  srnp_kernel.h  test_client.h
include/srnp/: Pair.h  PairQueue.h  PairSpace.h  client.h  master.h  master_hub.h  meta_pair_callback.hpp  server.h  srnp_kernel.h  srnp_print.h
include/srnp/msgs/: CommMessages.h  MasterMessages.h  MessageHeader.h
src/: Pair.cpp  PairSpace.cpp  client.cpp  master.cpp  master_hub.cpp  meta_pair_callback.cpp  meta_tuple_callback.cpp  server.cpp  simple.cpp  srnp_kernel.cpp  srnp_print.cpp  srnp_python.cpp  test_client.cpp
src/single_tests/: simple.cpp  simple2.cpp  simple_callback.cpp  testGetTupleIndirectly.cc  test_pair_space.cpp  test_srnpy.py
