<?xml version="1.0"?>
<package>
  <name>srnp</name>
  <version>0.1.0</version>
  <description>Simply Re-written New PEIS Package</description>

  <maintainer email="chitt@live.in">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>cmake</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>cmake</run_depend>
  <run_depend>boost</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
